# dofus-unity-rs

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
decode/: Cargo.toml  README.md  TODO.md
decode-wasm/: index.html
docs/: index.html
dofus_protocol/: all.html  enum.AnyUnpackError.html  fn.unpack_any.html  index.html  sidebar-items.js  type.AnyMessage.html
example/: Cargo.toml
game_protos/: .proto  account.proto  achievement.proto  admin.console.proto  alliance.conquest.proto  alliance.information.proto  alliance.member.proto  alliance.rank.proto  alliance.recruitment.proto  (+71 more)
protocol/: Cargo.toml  README.md  TODO.MD  build.rs
protocol/builder/: crawler.rs  main.rs  module_node.rs
protocol/protos/: game.proto
protocol/protos/connection/: connection.proto
protocol/protos/game/: account.proto  achievement.proto  admin.console.proto  alliance.conquest.proto  alliance.information.proto  alliance.member.proto  alliance.rank.proto  alliance.recruitment.proto  alteration.proto  anomaly.proto  area.proto  arena.proto  atlas.proto  bak.proto  basic.proto  breach.proto  challenge.proto  character.management.proto  character.proto  chat.proto  choice.proto  client.verification.proto  common.proto  contact.proto  context.proto  cosmetic.proto  debt.proto  debug.proto  dialog.proto  document.proto  element.proto  exchange.proto  fight.preparation.proto  fight.proto  finish.move.proto  game.action.proto  gamemap.proto  guild.application.proto  guild.chest.proto  guild.house.proto  (+32 more)
protocol/src/: lib.rs
(+5077 files in other folders)
